Compress spacing inside list items - fixes #12

--- a/site/homepage/_static/main.css
+++ b/site/homepage/_static/main.css
@@ -8255,6 +8255,9 @@ code {
   color: #30313F;
   padding: 0.125rem 0.25rem; }
 
+li p {
+  margin-bottom: 0; }
+
 pre {
   background-color: #30313F;
   color: #F8FAFF;
